msa/count-db-master.yaml
apiVersion: v1
kind: Pod
metadata:
  name: count-db-master
  labels:
    app: count-db-master
spec:
  restartPolicy: Always
  containers:
  - name: count-db-master
    image: redis
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 6379
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: data-count-db-master
---
apiVersion: v1
kind: Service
metadata:
  name: count-db-master
spec:
  selector:
    app: count-db-master
  type: ClusterIP
  # sessionAffinity: ClientIP
  ports:
  - port: 6379
