msa/count-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: count-db
spec:
  replicas: 3
  serviceName: count-db
  selector:
    matchLabels:
      db: count-db
  template:
    metadata:
      labels:
        db: count-db
    spec:
      containers:
      - name: count-db
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
        command:
        - /bin/sh
        - -c
#        - |
#          if [ `hostname` = count-db-0 ]; then
#            redis-server
#          else
#            redis-server --replicaof count-db-0.count-db.default.svc.cluster.local 6379
#          fi
        - redis-server --replicaof count-db-master.default.svc.cluster.local 6379
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Mi
---
apiVersion: v1
kind: Service
metadata:
  name: count-db
spec:
  selector:
    db: count-db
  type: ClusterIP
  # sessionAffinity: ClientIP
  ports:
    - port: 6379
