msa/logger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logger
  labels:
    app: logger
spec:
  restartPolicy: Always
  containers:
  - name: logger
    image: bosornd/logger
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
    volumeMounts:
---
apiVersion: v1
kind: Service
metadata:
  name: logger
spec:
  selector:
    app: logger
  type: ClusterIP
  # sessionAffinity: ClientIP
  ports:
  - port: 80
